--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
               </div>
             </div>
             
-            <div class="form__cvc">
+            <div class="form__cvv">
               <div>
-                <label class="form__label" for="cvc">cvc</label>
+                <label class="form__label" for="cvv">cvv</label>
               </div>
               <div>
-                <input class="form__input" type="number" id="cvc" placeholder="e.g. 123" maxlength="3">
+                <input class="form__input" type="number" id="cvv" placeholder="e.g. 123" maxlength="3">
               </div>
             </div>
           
